# bnc2d

./: .gitignore  README.md  pyproject.toml
networks/: child-mod.net  child_multi.net  cpcs54.net  nb.net  sachs.net
networks/binarynetworks/: andes.net  emdec6g.net  emdec6g.uai  tcc4e.net  tcc4e.uai  two_vars.net
problems/: Win95pts-AppOK.json  Win95pts-CblPrtHrdwrOK.json  Win95pts-DSApplctn.json  Win95pts-DataFile.json  Win95pts-DrvOK.json  Win95pts-DrvSet.json  Win95pts-DskLocal.json  Win95pts-EPSGrphc.json  Win95pts-FllCrrptdBffr.json  Win95pts-FntInstlltn.json  Win95pts-GrphcsRltdDrvrSttngs.json  Win95pts-NetPrint.json  Win95pts-NtwrkCnfg.json  Win95pts-PTROFFLINE.json  Win95pts-PgOrnttnOK.json  Win95pts-PrntngArOK.json  Win95pts-PrntrAccptsTrtyp.json  Win95pts-PrtCbl.json  Win95pts-PrtDriver.json  Win95pts-PrtMem.json  Win95pts-PrtMpTPth.json  Win95pts-PrtOn.json  Win95pts-PrtPScript.json  Win95pts-PrtPaper.json  Win95pts-PrtPath.json  Win95pts-PrtPort.json  Win95pts-PrtQueue.json  Win95pts-PrtSel.json  Win95pts-PrtSpool.json  Win95pts-PrtTimeOut.json  Win95pts-ScrnFntNtPrntrFnt.json  Win95pts-TnrSpply.json  Win95pts-TrTypFnts.json  andes-APPLY32-19.json  andes-APPLY32.json  andes-APPLY61-19.json  andes-APPLY61.json  andes-APPLY77-19.json  andes-APPLY77.json  andes-AXIS33-19.json  (+237 more)
src/: arithmetic_circuit.py  compile_bnc.py  compiled_nnf_search.py  factor_mat.py  global_config.py  java_inflib.py  joint_tree.py  nnf.py  utils.py
